crates/murphy-plugin-macros/tests/ui/fail_on_node_outside_cop.rs
use murphy_plugin_macros::on_node;

struct MyChecker;

#[on_node(kind = "send")]
fn check_send() {}

fn main() {}
